Fix --enable-preview option
Issue: runtimes/backlog/issues/171

[ci skip]

Signed-off-by: lanxia <lan_xia@ca.ibm.com>